--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,12 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>2.3.2</version>
+        </dependency>
+
     </dependencies>
 
     <properties>
